--- a/index.html
+++ b/index.html
@@ -1,3 +1,24 @@
-TEST
+<!DOCTYPE html>
 
-NEW CHANGE
+<html lang="en">
+
+    <head>
+
+        <meta name="viewport" content="initial-scale=1, width=device-width">
+
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+        
+        <title>CS50x Final Project</title>
+    </head>
+    
+    <body>
+
+        <nav class="navbar bg-light">
+            <div class="container-fluid">
+              <span class="navbar-brand mb-0 h1">Budget Tracker</span>
+            </div>
+          </nav>
+
+    </body>
+
+</html>
